<resources>
    <string name="app_name">MyQuizGame</string>

    <!--Login-->
    <string name="quiz_game">Quiz Game</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="continue_with">Continue with Google</string>
    <string name="sign_up">Don\'t you have an account yet? <u><i>Sign up</i></u></string>
    <string name="forgot"><u>I forgot my password</u></string>
    <!--    <string name="default_web_client_id">"957186861705-85pnl3u8o7e5hvcpqf4fnpcebjm2jdut.apps.googleusercontent.com"</string>-->

    <!--Sign Up-->
    <string name="signup">Sign up</string>

    <!--Reset password-->
    <string name="reset">Reset password</string>

    <!--Home-->
    <string name="start">Start Quiz</string>
    <string name="sign_out">Sign Out</string>

    <!--Quiz-->
    <string name="loading">Loading</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <!--    <string name="time">Time: </string>-->
    <!--    <string name="correct">Correct Answer: </string>-->
    <!--    <string name="wrong">Wrong Answer: </string>-->

    <!--Congratulation-->
    <string name="play_again">PLAY AGAIN</string>
    <string name="exit">EXIT</string>
    <string name="rank">RANK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--API-->
    <string name="getInfo">Get info</string>
    <string name="info">Info :</string>
</resources>