<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/quiz"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"
        android:layout_weight="55"
        android:background="@drawable/shape_sign_in">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"

            android:hint="@string/email"
            app:startIconDrawable="@drawable/icon_email"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"

                android:padding="15dp"
                android:textSize="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/input_layout_email"
            android:layout_marginTop="10dp"

            android:hint="@string/password"
            app:startIconDrawable="@drawable/icon_lock"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:drawablePadding="15dp"
                android:drawableRight="@drawable/icon_eye"
                android:inputType="textPassword"

                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"

            android:text="@string/signin"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            android:background="@drawable/btn_signin"

            android:layout_below="@id/input_layout_password"
            android:layout_marginTop="40dp"/>

        <RelativeLayout
            android:id="@+id/or_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/btn_signin"
            android:layout_marginTop="40dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="OR"
                android:textSize="15dp"
                android:background="@color/background"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/continue_layout"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_below="@id/or_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"

            android:background="@drawable/btn_signin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"

                android:text="@string/continue_with"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:background="@android:color/transparent"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="15dp"
            android:layout_below="@id/continue_layout"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/txt_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:textSize="15dp"
            android:layout_below="@id/txt_signup"
            android:layout_marginTop="30dp"/>
    </RelativeLayout>
</LinearLayout>