<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".view.quiz.QuizFragment">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"/>

    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"

        android:text="@string/loading"
        android:textColor="@color/white"
        android:layout_margin="17dp"
        android:textSize="25dp"/>

    <RelativeLayout
        android:id="@+id/ques_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:visibility="gone"
        tools:context=".Controller.CreateDataAcitvity">

        <LinearLayout
            android:id="@+id/state_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"

                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/correct_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"

                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"/>

            <TextView
                android:id="@+id/wrong_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"

                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/ques"
            android:layout_width="380dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:layout_below="@id/state_layout"

            android:textSize="20sp"
            android:padding="15dp"
            android:background="@drawable/question"/>

        <TextView
            android:id="@+id/ans1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_below="@id/ques"
            android:gravity="center"

            android:textSize="17sp"
            android:padding="15dp"
            android:background="@drawable/question"/>

        <TextView
            android:id="@+id/ans2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_below="@id/ans1"
            android:gravity="center"

            android:textSize="17sp"
            android:padding="15dp"
            android:background="@drawable/question"/>

        <TextView
            android:id="@+id/ans3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_below="@id/ans2"
            android:gravity="center"

            android:textSize="17sp"
            android:padding="15dp"
            android:background="@drawable/question"/>

        <TextView
            android:id="@+id/ans4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:layout_below="@id/ans3"
            android:gravity="center"

            android:textSize="17sp"
            android:padding="15dp"
            android:background="@drawable/question"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ans4"
            android:layout_marginTop="100dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"

                android:text="@string/finish"
                android:textSize="20sp"
                android:background="@drawable/btn_signin"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"

                android:text="@string/next"
                android:textSize="20sp"
                android:background="@drawable/btn_signin"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>